@@ -1,3 +1,4 @@
+Refactored teacher playback controls
 # 1.00.08 (49543) Mar 6, 2011
 Restore the moon near the earth and with the same relative velocity vector
 Internationalized "Return Object"
